# test-fw

./: .gitignore  README.md  pyproject.toml
postman/: WeatherAPI.postman_collection.json  WeatherAPI.postman_environment.json
test_fw/components/: menu.py
test_fw/pages/: inventory.py  login.py
tests/: conftest.py  test_login.py
tests/features/: login.feature
